--- a/styling/style.css
+++ b/styling/style.css
@@ -1,11 +1,67 @@
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+
+body{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+
+.main-container{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 40px;
+    height: 800px;
+    width: 70%;
+    box-shadow: rgba(14, 30, 37, 0.12) 0px 2px 4px 0px, rgba(14, 30, 37, 0.32) 0px 2px 16px 0px;
+    border-radius: 10px;
+    gap: 10px;
+
+}
+
+.input-wrapper{
+    display: flex;
+    gap: 10px;
+    margin-top: 30px;
+}
+
+.post-parent{
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+}
+
 li{
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     text-align: center;
+    position: relative;
     gap: 10px;
+    box-shadow: rgba(14, 30, 37, 0.12) 0px 2px 4px 0px, rgba(14, 30, 37, 0.32) 0px 2px 16px 0px;
+    border-radius: 10px;
+    width: 50%;
+    height: 200px;
 }
 
+.button-wrapper{
+    display: flex;
+    position: absolute;
+    top: 0px;
+    right: 0px;
+    gap: 10px;
+}
 
 .completeTask {
     text-decoration-line: line-through;
